force-app/main/default/objects/Case/fields/AEMO_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>AEMO_Publish_Date__c</fullName>
    <description>Captures the date an application is first published and has been received by AEMO successfully</description>
    <label>AEMO Publish Date</label>
    <type>Date</type>
</CustomField>