force-app/main/default/objects/Case/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <description>Email merge field</description>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>