force-app/main/default/objects/Case/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <description>DER Application Number</description>
    <label>Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>