force-app/main/default/objects/Case/fields/Assessment_Required_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Required_Indicator__c</fullName>
    <description>New formula field created for DER ESC Performance Report</description>
    <formula>IF(ISPICKVAL(DER_Application_Scenario__c,&quot;Manual&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Required Indicator</label>
    <type>Text</type>
</CustomField>