force-app/main/default/objects/Case/fields/AttachmentIds__c.field-meta.xml
<CustomField>
    <fullName>AttachmentIds__c</fullName>
    <description>created to store the attachment id of SLD document which will reference in docgen package</description>
    <label>AttachmentIds</label>
    <length>18</length>
    <type>Text</type>
</CustomField>