force-app/main/default/objects/Case/fields/AusNet_Owned_Meter__c.field-meta.xml
<CustomField>
    <fullName>AusNet_Owned_Meter__c</fullName>
    <description>When ticked, this indicates there is an AusNet owned meter and reconfig will be required.
It is ticked if &apos;Meter Install Type Code&apos; on DER Application is RRIM, MRIM, or BASIC.</description>
    <formula>OR(
DER_Application__r.Meter_Install_Type_Code__c  = &quot;RRIM&quot;,
DER_Application__r.Meter_Install_Type_Code__c  = &quot;MRIM&quot;,
DER_Application__r.Meter_Install_Type_Code__c  = &quot;BASIC&quot;
)</formula>
    <inlineHelpText>When ticked, this indicates there is an AusNet owned meter and reconfig will be required.
It is ticked if &apos;Meter Install Type Code&apos; on DER Application is RRIM, MRIM, or BASIC.</inlineHelpText>
    <label>AusNet Owned Meter</label>
    <type>Checkbox</type>
</CustomField>