force-app/main/default/objects/Case/fields/Auto_Applicant_LastName__c.field-meta.xml
<CustomField>
    <fullName>Auto_Applicant_LastName__c</fullName>
    <description>Auto Preapproved Applicant</description>
    <label>Applicant Last Name (Auto)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>