force-app/main/default/objects/Case/fields/Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Reason__c</fullName>
    <label>Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Not Received</fullName>
            </value>
            <value>
                <fullName>Applicant Declined</fullName>
            </value>
            <value>
                <fullName>AusNet Refused</fullName>
            </value>
            <value>
                <fullName>Offer Expired</fullName>
            </value>
            <value>
                <fullName>Unauthorised</fullName>
            </value>
            <value>
                <fullName>Flexible Exports Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>