force-app/main/default/objects/Case/fields/Case_Ready__c.field-meta.xml
<CustomField>
    <fullName>Case_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Ready</label>
    <type>Checkbox</type>
</CustomField>