force-app/main/default/objects/Case/fields/Case_Status_Age_fx__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Age_fx__c</fullName>
    <formula>TODAY()- DATEVALUE(Case_Status_Set__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>