force-app/main/default/objects/Case/fields/Case_Status_Set__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Set__c</fullName>
    <label>Case Status Set</label>
    <type>DateTime</type>
</CustomField>