force-app/main/default/objects/Case/fields/Construction_Measure__c.field-meta.xml
<CustomField>
    <fullName>Construction_Measure__c</fullName>
    <description>Records the Construction Measure from ERP</description>
    <label>Construction Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>