force-app/main/default/objects/Case/fields/Contract_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active_Date__c</fullName>
    <label>Contract Active Date</label>
    <type>Date</type>
</CustomField>