force-app/main/default/objects/Case/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <description>Criteria field for email notification</description>
    <label>Contract Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>