force-app/main/default/objects/Case/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <description>Today&apos;s date in text (dd/mm/yyyy)</description>
    <formula>TEXT( DAY( TODAY() )) &amp; &quot;/&quot; &amp; TEXT( MONTH( TODAY() )) &amp; &quot;/&quot; &amp; TEXT( YEAR( TODAY()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date</label>
    <type>Text</type>
</CustomField>