force-app/main/default/objects/Case/fields/Customer_ABN__c.field-meta.xml
<CustomField>
    <fullName>Customer_ABN__c</fullName>
    <formula>Customer__r.ABN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ABN</label>
    <type>Text</type>
</CustomField>