force-app/main/default/objects/Case/fields/Customer_Accreditation_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Accreditation_No__c</fullName>
    <formula>Customer__r.ASPAccreditaionId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Accreditation No</label>
    <type>Text</type>
</CustomField>