force-app/main/default/objects/Case/fields/Customer_Company__c.field-meta.xml
<CustomField>
    <fullName>Customer_Company__c</fullName>
    <formula>Customer__r.Customer_Company_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Company</label>
    <type>Text</type>
</CustomField>