force-app/main/default/objects/Case/fields/Customer_Email_Fx__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Fx__c</fullName>
    <formula>Customer__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email Fx</label>
    <type>Text</type>
</CustomField>