force-app/main/default/objects/Case/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <formula>Customer__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Last Name</label>
    <type>Text</type>
</CustomField>