force-app/main/default/objects/Case/fields/Customer_Mailing_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mailing_AddressLine1__c</fullName>
    <formula>Customer__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mailing AddressLine1</label>
    <type>Text</type>
</CustomField>