force-app/main/default/objects/Case/fields/Customer_Mailing_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mailing_AddressLine2__c</fullName>
    <formula>Customer__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mailing AddressLine2</label>
    <type>Text</type>
</CustomField>