force-app/main/default/objects/Case/fields/Customer_Mailing_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mailing_Postcode__c</fullName>
    <formula>Customer__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mailing Postcode</label>
    <type>Text</type>
</CustomField>