force-app/main/default/objects/Case/fields/Customer_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mailing_State__c</fullName>
    <formula>Customer__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mailing State</label>
    <type>Text</type>
</CustomField>