force-app/main/default/objects/Case/fields/Customer_Mailing_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mailing_Suburb__c</fullName>
    <formula>Customer__r.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Mailing Suburb</label>
    <type>Text</type>
</CustomField>