force-app/main/default/objects/Case/fields/Customer_Supply_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_AddressLine1__c</fullName>
    <formula>Customer__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Supply AddressLine1</label>
    <type>Text</type>
</CustomField>