force-app/main/default/objects/Case/fields/Customer_Supply_AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_AddressLine2__c</fullName>
    <formula>Customer__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Supply AddressLine2</label>
    <type>Text</type>
</CustomField>