force-app/main/default/objects/Case/fields/Customer_Supply_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_Postcode__c</fullName>
    <formula>Customer__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Supply Postcode</label>
    <type>Text</type>
</CustomField>