force-app/main/default/objects/Case/fields/Customer_Supply_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_Supply_State__c</fullName>
    <formula>Customer__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Supply State</label>
    <type>Text</type>
</CustomField>