force-app/main/default/objects/Case/fields/Date_Application_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Application_Completed__c</fullName>
    <description>New custom field created for DER ESC Reporting</description>
    <formula>DATEVALUE(ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_Application_Completed</label>
    <type>Date</type>
</CustomField>