force-app/main/default/objects/Case/fields/Date_Assessment_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Date_Assessment_Outcome__c</fullName>
    <formula>IF(ISPICKVAL( DER_Application_Scenario__c , &quot;Manual&quot;), Offer_Made_Date__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_Assessment_Outcome</label>
    <type>Date</type>
</CustomField>