force-app/main/default/objects/Case/fields/Date_Assessment_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Assessment_Received__c</fullName>
    <description>Formula Field Created for DER ESC Performance Report</description>
    <formula>IF(ISPICKVAL(DER_Application_Scenario__c,&quot;Manual&quot;), CreatedDate , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Assessment Received</label>
    <type>Date</type>
</CustomField>