force-app/main/default/objects/Case/fields/Date_PreApproval_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_PreApproval_Received__c</fullName>
    <formula>IF(ISPICKVAL( DER_Application_Scenario__c , &quot;Auto&quot;), DATEVALUE(CreatedDate), 
IF(AND(ISPICKVAL(DER_Application_Scenario__c, &quot;Manual&quot;), ISPICKVAL( Agreement_Type__c , &quot;Basic Micro EG MSO&quot;)),  Offer_Made_Date__c , NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date_PreApproval_Received</label>
    <type>Date</type>
</CustomField>