force-app/main/default/objects/Case/fields/dcp_ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_ABN_Number__c</fullName>
    <formula>Account.dcp_ABN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN Number</label>
    <type>Text</type>
</CustomField>