force-app/main/default/objects/Case/fields/dcp_Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>dcp_Applicant_Email__c</fullName>
    <description>Captures applicant&apos;s email from Storm Relief form</description>
    <label>Applicant Email</label>
    <type>Email</type>
</CustomField>