force-app/main/default/objects/Case/fields/dcp_Applicant_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_Applicant_Last_Name__c</fullName>
    <description>Captures alternative contact&apos;s last name</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>