force-app/main/default/objects/Case/fields/dcp_Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>dcp_Applicant_Phone__c</fullName>
    <description>Captures alternative contact&apos;s phone number</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>