force-app/main/default/objects/Case/fields/dcp_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>dcp_Application_ID__c</fullName>
    <description>Used to capture the Storm Relief application number</description>
    <externalId>true</externalId>
    <label>Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>