force-app/main/default/objects/Case/fields/dcp_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>dcp_Application_Type__c</fullName>
    <description>Captures application type from Storm Relief form</description>
    <label>Application Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>