force-app/main/default/objects/Case/fields/dcp_Assisted_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>dcp_Assisted_Referral_Date__c</fullName>
    <label>Assisted Referral Date</label>
    <type>Date</type>
</CustomField>