force-app/main/default/objects/Case/fields/dcp_AusNet_Consultant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_AusNet_Consultant_Email_Address__c</fullName>
    <label>AusNet Consultant Email Address</label>
    <type>Email</type>
</CustomField>