force-app/main/default/objects/Case/fields/dcp_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_Bank_Account_Name__c</fullName>
    <description>Captures Account Name from Storm Relief form</description>
    <label>Bank Account Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>