force-app/main/default/objects/Case/fields/dcp_Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_Bank_Account_Number__c</fullName>
    <description>Captures Customer Bank Account Number</description>
    <label>Bank Account Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>