force-app/main/default/objects/Case/fields/dcp_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_Bank_Name__c</fullName>
    <description>Captures Bank Name from Storm Relief form</description>
    <label>Bank Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>