force-app/main/default/objects/Case/fields/dcp_BSB__c.field-meta.xml
<CustomField>
    <fullName>dcp_BSB__c</fullName>
    <description>Captures Customer BSB number</description>
    <label>BSB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>