force-app/main/default/objects/Case/fields/DCP_Case_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>DCP_Case_Open_Date__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Open Date</label>
    <type>Date</type>
</CustomField>