force-app/main/default/objects/Case/fields/dcp_Case_Outcome__c.field-meta.xml
<CustomField>
    <fullName>dcp_Case_Outcome__c</fullName>
    <description>Outcome of Case</description>
    <label>Case Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Educated Customer</fullName>
            </value>
            <value>
                <fullName>External referral - Other</fullName>
            </value>
            <value>
                <fullName>External referral - Downer</fullName>
            </value>
            <value>
                <fullName>External referral - Veg Management</fullName>
            </value>
            <value>
                <fullName>External referral - Contractor</fullName>
            </value>
            <value>
                <fullName>No Customer Contact</fullName>
            </value>
            <value>
                <fullName>No Further Action</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Refer to Contractor</fullName>
                <isActive>false</isActive>
                <label>Refer to Contractor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>