force-app/main/default/objects/Case/fields/dcp_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>dcp_Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>dcp_ElecGas_Complaint_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gates left open / not secured</fullName>
            </value>
            <value>
                <fullName>Refusal</fullName>
            </value>
            <value>
                <fullName>Animal Impact</fullName>
            </value>
            <value>
                <fullName>Damage due to 3rd party</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Malfunction</fullName>
            </value>
            <value>
                <fullName>Noisy Transformer</fullName>
            </value>
            <value>
                <fullName>Oil Spill</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Poles &amp; Wires</fullName>
            </value>
            <value>
                <fullName>TV/Radio Interference</fullName>
            </value>
            <value>
                <fullName>Underground Pit</fullName>
            </value>
            <value>
                <fullName>Vegetation Impacting</fullName>
            </value>
            <value>
                <fullName>Weather/lightning</fullName>
            </value>
            <value>
                <fullName>Auto Reclose</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Processing Delay</fullName>
            </value>
            <value>
                <fullName>Settlement Offer Compliment</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Delay</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Asset Inspection</fullName>
            </value>
            <value>
                <fullName>Estimated/ Substituted data</fullName>
            </value>
            <value>
                <fullName>High Account</fullName>
            </value>
            <value>
                <fullName>Off peak</fullName>
            </value>
            <value>
                <fullName>Reader</fullName>
            </value>
            <value>
                <fullName>Costs / fees</fullName>
            </value>
            <value>
                <fullName>HVI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>