force-app/main/default/objects/Case/fields/dcp_claim_ABN_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_ABN_Number__c</fullName>
    <description>Captures ABN Number from Claim form</description>
    <label>ABN Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>