force-app/main/default/objects/Case/fields/dcp_claim_acknowledge_the_declaration__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_acknowledge_the_declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures I acknowledge the declaration above from Claim form</description>
    <label>I acknowledge the declaration above</label>
    <type>Checkbox</type>
</CustomField>