force-app/main/default/objects/Case/fields/dcp_claim_Address_of_Property__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Address_of_Property__c</fullName>
    <description>Captures Address of Property from Claim form</description>
    <label>Address of Property</label>
    <length>40</length>
    <type>Text</type>
</CustomField>