force-app/main/default/objects/Case/fields/dcp_Claim_Assessment_Notes__c.field-meta.xml
<CustomField>
    <fullName>dcp_Claim_Assessment_Notes__c</fullName>
    <description>Detailed assessment notes for Claim</description>
    <label>Claim Assessment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>