force-app/main/default/objects/Case/fields/dcp_claim_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Business_Name__c</fullName>
    <description>Captures Business Name from Claim form</description>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>