force-app/main/default/objects/Case/fields/dcp_claim_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Contact_Number__c</fullName>
    <description>Captures Customer Contact Number from Claim form</description>
    <label>Contact Number</label>
    <type>Phone</type>
</CustomField>