force-app/main/default/objects/Case/fields/dcp_claim_Full_Name_of_Claimant__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Full_Name_of_Claimant__c</fullName>
    <description>Captures Full Name of Claimant from Claim form</description>
    <label>Full Name of Claimant</label>
    <length>40</length>
    <type>Text</type>
</CustomField>