force-app/main/default/objects/Case/fields/dcp_claim_I_dont_have_an_email_address__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_I_dont_have_an_email_address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures I don&apos;t have an email address checkbox from Claim form</description>
    <label>I don&apos;t have an email address</label>
    <type>Checkbox</type>
</CustomField>