force-app/main/default/objects/Case/fields/dcp_claim_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Mailing_Address__c</fullName>
    <description>Captures Mailing Address from Claim form</description>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>