force-app/main/default/objects/Case/fields/dcp_claim_Mailing_Address_State__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Mailing_Address_State__c</fullName>
    <description>Captures Mailing Address State from Claim form</description>
    <label>Mailing Address State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>