force-app/main/default/objects/Case/fields/dcp_claim_Mailing_Address_Suburb__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Mailing_Address_Suburb__c</fullName>
    <description>Captures Mailing Address Suburb from Claim form</description>
    <label>Mailing Address Suburb</label>
    <length>40</length>
    <type>Text</type>
</CustomField>