force-app/main/default/objects/Case/fields/dcp_claim_Property_Address_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Property_Address_Post_Code__c</fullName>
    <description>Captures Property Address Post Code from Claim form</description>
    <label>Property Address Post Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>