force-app/main/default/objects/Case/fields/dcp_claim_Property_Address_State__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Property_Address_State__c</fullName>
    <description>Captures Property Address State from Claim form</description>
    <label>Property Address State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>