force-app/main/default/objects/Case/fields/dcp_Claim_Report_Blank_Field__c.field-meta.xml
<CustomField>
    <fullName>dcp_Claim_Report_Blank_Field__c</fullName>
    <description>Intentionally blank field for reporting - not for UI</description>
    <label>Claim Report Blank Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>