force-app/main/default/objects/Case/fields/dcp_claim_Title__c.field-meta.xml
<CustomField>
    <fullName>dcp_claim_Title__c</fullName>
    <description>Captures Title from Claim form</description>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Mr &amp; Mrs</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>