force-app/main/default/objects/Case/fields/dcp_Claim_Type_Conditional__c.field-meta.xml
<CustomField>
    <fullName>dcp_Claim_Type_Conditional__c</fullName>
    <label>Claim Type Conditional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>